--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 main {
     display: flex;
     min-height: 100vh;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .left-col {
@@ -47,20 +47,27 @@ main {
 
 .right-col {
     background-color: #f9fafb;
+    width: 100%;
 }
 
 .text-content {
-    padding: 2rem;
+    padding: 4rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    width: 800px;
+}
+.text-content p:nth-child(2){
+    margin-top: 1rem;
 }
 
 .form-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center;;
 }
 
 form {
-    padding: 2rem;
+    padding: 4rem;
     box-shadow: 0 4px 2px -2px rgb(163, 162, 162);
 
 }
