--- a/styles.css
+++ b/styles.css
@@ -79,11 +79,16 @@ legend{
     font-weight: 500;
     font-size: 1.4rem;
 }
+
 fieldset{
     display: flex;
     flex-direction: column;
     width: 200px;
     margin-bottom: 1rem;
+    border: unset; /*Removes browser default*/
+}
+label{
+   color: #555555;
 }
 .button-container{
     margin: .5rem;
